# internal/models/religion.go
@@ -4,3 +4,7 @@ type Religion struct {
 	Identifier string `json:"identifier" bson:"identifier" validate:"required,uuid"`
 	Name       string `json:"name" bson:"name" validate:"required"`
 }
+
+type ReligionRequest struct {
+	Name       string `json:"name" bson:"name" validate:"required"`
+}
